--- a/src/components/Jumbotron/ComicCard.css
+++ b/src/components/Jumbotron/ComicCard.css
@@ -1,22 +1,17 @@
 .comic-card {
     width: 150px;
-    background-color: transparent;
-    border: none;
     text-align: center;
     color: white;
   }
   
   .comic-thumb {
     width: 100%;
-    height: auto;
-    display: block;
-    margin-bottom: 0.5rem;
     border-radius: 4px;
   }
   
   .comic-title {
-    font-size: 0.75rem;
+    font-size: 0.7rem;
     text-transform: uppercase;
-    font-weight: bold;
+    margin-top: 0.4rem;
   }
   
