--- a/src/components/Jumbotron/ComicCard.css
+++ b/src/components/Jumbotron/ComicCard.css
@@ -1,17 +1,24 @@
 .comic-card {
-    width: 150px;
-    text-align: center;
-    color: white;
-  }
+  width: 150px;
+  height: 320px; /* opzionale, per uniformità */
+  text-align: center;
+  color: white;
+  overflow: hidden;
+}
+
   
   .comic-thumb {
     width: 100%;
+    height: 200px; 
+    object-fit: cover; 
     border-radius: 4px;
   }
+  
+  
   
   .comic-title {
     font-size: 0.7rem;
     text-transform: uppercase;
     margin-top: 0.4rem;
   }
-  
+
