--- a/src/components/Jumbotron/JumboContent.css
+++ b/src/components/Jumbotron/JumboContent.css
@@ -24,6 +24,11 @@
   text-transform: uppercase;
 }
 
+.current-series-btn:hover {
+  background-color: #026bd1;   /* colore più scuro quando ci passi sopra */
+}
+
+
 /* 🖤 BOTTOM: Sfondo nero con le card */
 .jumbotron-bottom {
   background-color: #1c1c1c;
@@ -36,7 +41,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
- max-width: 70rem;
+  max-width: 70rem;
   margin: 0 auto;
   gap: 1.5rem;
 }
@@ -46,20 +51,20 @@
   background-color: #0282f9;
   color: white;
   border: none;
-  padding: 0.8rem 2rem;
+  padding: 0.7rem 3rem;
   margin-top: 2rem;
   font-weight: bold;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 0.70em;
   text-transform: uppercase;
 }
 
+.load-more:hover {
+  background-color: #026bd1;   /* colore più scuro quando ci passi sopra */
+}
 
-  @media (max-width: 768px) {
-    .jumbotron {
-      
-      font-size: 1.2rem;
-      padding: 0 1rem;
-    }
-  }
+
+
+
+
   
